# mecheye_python_samples

./: README.md
Mech-Eye API_1.5.2_Ubuntu_Amd64/: MechEyeApi_1.5.2_amd64.deb
area_scan_3d_camera/: CMakeLists.txt  README.md
area_scan_3d_camera/Advanced/: capture_periodically.py  convert_depth_map_to_point_cloud.py  mapping_2d_image_to_depth_map.py  multiple_cameras_capture_sequentially.py  register_camera_event.py  set_parameters_of_laser_cameras.py
area_scan_3d_camera/Advanced/CapturePeriodically/: CMakeLists.txt  CapturePeriodically.cpp  README.md
area_scan_3d_camera/Advanced/CaptureStereo2DImages/: CMakeLists.txt  CaptureStereo2DImages.cpp  README.md
area_scan_3d_camera/Advanced/ConvertDepthMapToPointCloud/: CMakeLists.txt  ConvertDepthMapToPointCloud.cpp  README.md
area_scan_3d_camera/Advanced/Mapping2DImageToDepthMap/: CMakeLists.txt  Mapping2DImageToDepthMap.cpp  README.md
area_scan_3d_camera/Advanced/MultipleCamerasCaptureSequentially/: CMakeLists.txt  MultipleCamerasCaptureSequentially.cpp  README.md
area_scan_3d_camera/Advanced/MultipleCamerasCaptureSimultaneously/: CMakeLists.txt  MultipleCamerasCaptureSimultaneously.cpp  README.md
area_scan_3d_camera/Advanced/RegisterCameraEvent/: CMakeLists.txt  README.md  RegisterCameraEvent.cpp
area_scan_3d_camera/Advanced/SetParametersOfLaserCameras/: CMakeLists.txt  README.md  SetParametersOfLaserCameras.cpp
area_scan_3d_camera/Advanced/SetParametersOfUHPCameras/: CMakeLists.txt  README.md  SetParametersOfUHPCameras.cpp
area_scan_3d_camera/Basic/: capture_2d_image.py  capture_depth_map.py  capture_point_cloud.py  capture_point_cloud_with_normals.py  connect_and_capture_images.py  connect_to_camera.py
area_scan_3d_camera/Basic/Capture2DImage/: CMakeLists.txt  Capture2DImage.cpp  README.md
area_scan_3d_camera/Basic/CaptureDepthMap/: CMakeLists.txt  CaptureDepthMap.cpp  README.md
area_scan_3d_camera/Basic/CapturePointCloud/: CMakeLists.txt  CapturePointCloud.cpp  README.md
area_scan_3d_camera/Basic/CapturePointCloudHDR/: CMakeLists.txt  CapturePointCloudHDR.cpp  README.md
area_scan_3d_camera/Basic/CapturePointCloudWithNormals/: CMakeLists.txt  CapturePointCloudWithNormals.cpp  README.md
area_scan_3d_camera/Basic/ConnectAndCaptureImages/: CMakeLists.txt  ConnectAndCaptureImages.cpp  README.md
area_scan_3d_camera/Basic/ConnectToCamera/: CMakeLists.txt  ConnectToCamera.cpp  README.md
area_scan_3d_camera/Calibration/HandEyeCalibration/: CMakeLists.txt  HandEyeCalibration.cpp  HandEyeCalibrationUtil.h  README.md
area_scan_3d_camera/Halcon/ConvertPointCloudToObjectModel3D/: CMakeLists.txt  ConvertPointCloudToObjectModel3D.cpp  HalconUtil.cpp  HalconUtil.h  README.md
area_scan_3d_camera/Halcon/cmake/: FindHDevEngine.cmake  FindHalcon.cmake
area_scan_3d_camera/Pcl/ConvertPointCloudToPcl/: CMakeLists.txt  ConvertPointCloudToPcl.cpp  README.md
area_scan_3d_camera/Pcl/ConvertPointCloudWithNormalsToPcl/: CMakeLists.txt  ConvertPointCloudWithNormalsToPcl.cpp  README.md
area_scan_3d_camera/Util/: manage_user_sets.py  print_camera_info.py  save_and_load_user_set.py  set_point_cloud_processing_parameters.py  set_scanning_parameters.py
area_scan_3d_camera/Util/GetCameraIntrinsics/: CMakeLists.txt  GetCameraIntrinsics.cpp  README.md
area_scan_3d_camera/Util/ManageUserSets/: CMakeLists.txt  ManageUserSets.cpp  README.md
area_scan_3d_camera/Util/PrintCameraInfo/: CMakeLists.txt  PrintCameraInfo.cpp  README.md
area_scan_3d_camera/Util/SaveAndLoadUserSet/: CMakeLists.txt  README.md  SaveAndLoadUserSet.cpp
area_scan_3d_camera/Util/SetDepthRange/: CMakeLists.txt  README.md  SetDepthRange.cpp
area_scan_3d_camera/Util/SetPointCloudProcessingParameters/: CMakeLists.txt  README.md  SetPointCloudProcessingParameters.cpp
area_scan_3d_camera/Util/SetScanningParameters/: CMakeLists.txt  README.md  SetScanningParameters.cpp
area_scan_3d_camera/advanced/: capture_stereo_2d_images.py  mapping_2d_image_to_depth_map.py  multiple_cameras_capture_sequentially.py  multiple_cameras_capture_simultaneously.py  register_camera_event.py  render_depth_map.py  set_parameters_of_uhp_cameras.py  transform_point_cloud.py
area_scan_3d_camera/basic/: capture_point_cloud.py  capture_point_cloud_hdr.py  save_virtual_device.py
area_scan_3d_camera/calibration/: hand_eye_calibration.py
area_scan_3d_camera/util/: get_camera_intrinsics.py  manage_user_set.py  manage_user_sets.py  set_depth_range.py  set_point_cloud_processing_parameters.py  set_scanning_parameters.py
profiler/: CMakeLists.txt  README.md  acquire_point_cloud.py  acquire_profile_data.py  acquire_profile_data_using_callback.py  blind_spot_filtering.py  blindspot_filter.py  manage_user_sets.py  noise_removal.py  print_profiler_status.py  profile_alignment.py  register_profiler_event.py  render_depth_map.py  transform_point_cloud.py  trigger_multiple_profilers_simultaneously.py  trigger_non_stop_acquisition.py  trigger_with_external_device_and_encoder.py  trigger_with_external_device_and_fixed_rate.py  trigger_with_software_and_encoder.py  trigger_with_software_and_fixed_rate.py  use_virtual_device.py
profiler/ManageUserSets/: CMakeLists.txt  ManageUserSets.cpp  README.md
profiler/RegisterProfilerEvent/: CMakeLists.txt  README.md  RegisterProfilerEvent.cpp
profiler/TriggerMultipleProfilersSimultaneously/: CMakeLists.txt  README.md  TriggerMultipleProfilersSimultaneously.cpp
profiler/TriggerWithExternalDeviceAndEncoder/: CMakeLists.txt  README.md  TriggerWithExternalDeviceAndEncoder.cpp
profiler/TriggerWithExternalDeviceAndFixedRate/: CMakeLists.txt  README.md  TriggerWithExternalDeviceAndFixedRate.cpp
profiler/TriggerWithSoftwareAndEncoder/: CMakeLists.txt  README.md  TriggerWithSoftwareAndEncoder.cpp
profiler/TriggerWithSoftwareAndFixedRate/: CMakeLists.txt  README.md  TriggerWithSoftwareAndFixedRate.cpp
profiler/UseVirtualDevice/: CMakeLists.txt  README.md  UseVirtualDevice.cpp
samples/: captureResultToCV.py  captureResultToPLY.py  connectAndCaptureImage.py  getAndSetParameter.py
source/: Common.py
source/Basic/: CaptureColorMap.py  (+7 more)
(+16 files in other folders)
